--- a/Developing_Data_Products/Project/DDP_Final_Project/pitch/index.html
+++ b/Developing_Data_Products/Project/DDP_Final_Project/pitch/index.html
@@ -33,7 +33,7 @@
         <slide class="title-slide segue nobackground">
   <hgroup class="auto-fadein">
     <h1>Earthquake Data Visualizer</h1>
-    <h2></h2>
+    <h2>JHU Coursera - Developing Data Products</h2>
     <p>suttonbm<br/></p>
   </hgroup>
   <article></article>  
@@ -41,17 +41,12 @@
     
 
     <!-- SLIDES -->
-    <slide class="eighty" id="slide-1" style="background:;">
+    <slide class="" id="slide-1" style="background:;">
+  <hgroup>
+    <h2>Introduction</h2>
+  </hgroup>
   <article data-timings="">
-    <Style>
-.eighty {
-  font-size: 80%;
-}
-</style>
-
-<h2>Introduction</h2>
-
-<p>The earthquake visualization tool was developed for the Developing Data Products course offered by Johns Hopkins University on Coursera.  The purpose of the tool is to allow a user to explore historical earthquake data by magnitude, date, and location.  A map is drawn for a selected region, and earthquakes are overlaid on the map with scale and color corresponding to earthquake magnitude.</p>
+    <p>The earthquake visualization tool was developed for the Developing Data Products course offered by Johns Hopkins University on Coursera.  The purpose of the tool is to allow a user to explore historical earthquake data by magnitude, date, and location.  A map is drawn for a selected region, and earthquakes are overlaid on the map with scale and color corresponding to earthquake magnitude.</p>
 
 <div style='text-align: center;'>
     <img src='assets/img/worldpic.png' />
@@ -121,7 +116,7 @@
     <p>Earthquake plots are generated using the <code>maps</code> package in combination with R base graphics.  A plot can be generated using the source package as follows:</p>
 
 <div style='float:left;width:48%;' class='centered'>
-  <p><img src="assets/fig/unnamed-chunk-4-1.png" alt="plot of chunk unnamed-chunk-4"></p>
+  <p><img src="figure/unnamed-chunk-6-1.png" alt="plot of chunk unnamed-chunk-6"></p>
 
 </div>
 <div style='float:right;width:48%;'>
@@ -144,7 +139,7 @@ generateMap(rawData.M,
     <ul>
       <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=1 title='NA'>
+        data-slide=1 title='Introduction'>
          1
       </a>
     </li>
